--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,25 @@
 set-option -g mouse-select-pane on
 set-option -g mouse-select-window on
 set-window-option -g mode-mouse on
-set-window-option -g automatic-rename on
+
+# splitting and cycling
+unbind %
+bind + split-window -h # horizontal split
+unbind '"'
+bind _ split-window -v # vertical split
+bind C-j previous-window
+bind C-k next-window
+
+# highlight active window
+set-window-option -g window-status-current-bg red
+
+# next tab
+bind-key -n C-right next
+
+# previous tab
+bind-key -n C-left prev
+
+# window title
+set-option -g set-titles on
+set-option -g set-titles-string '#S:#W' # window number,program name,active (or not)
+set-window-option -g automatic-rename on # auto name
