--- a/tmux.conf
+++ b/tmux.conf
@@ -23,3 +23,6 @@ bind-key -n C-left prev
 set-option -g set-titles on
 set-option -g set-titles-string '#S:#W' # window number,program name,active (or not)
 set-window-option -g automatic-rename on # auto name
+
+set -g base-index 1
+set -g pane-base-index 1
