--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,22 @@
+# prefix
+unbind C-b
+set -g prefix C-a
+
+# base index
+set -g base-index 1
+set -g pane-base-index 1
+
+# enable mouse for pane, window
 set-option -g mouse-select-pane on
 set-option -g mouse-select-window on
 set-window-option -g mode-mouse on
+
+# highlight active window
+set-window-option -g window-status-current-bg red
+
+# activity
+# setw -g monitor-activity on
+# set -g visual-activity on
 
 # splitting and cycling
 unbind %
@@ -10,19 +26,16 @@ bind _ split-window -v # vertical split
 bind C-j previous-window
 bind C-k next-window
 
-# highlight active window
-set-window-option -g window-status-current-bg red
-
-# next tab
-bind-key -n C-right next
-
-# previous tab
-bind-key -n C-left prev
+# pane switching with Alt+arrow
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
 
 # window title
 set-option -g set-titles on
 set-option -g set-titles-string '#S:#W' # window number,program name,active (or not)
 set-window-option -g automatic-rename on # auto name
 
-set -g base-index 1
-set -g pane-base-index 1
+bind B source-file ~/dotfiles/two.panes.cmds
+bind C source-file ~/dotfiles/three.panes.cmds
