add pyenv path to bash profile

--- a/tmux.conf
+++ b/tmux.conf
@@ -7,9 +7,9 @@ set -g base-index 1
 set -g pane-base-index 1
 
 # enable mouse for pane, window
-set-option -g mouse-select-pane on
-set-option -g mouse-select-window on
-set-window-option -g mode-mouse on
+set -g mouse on
+bind -n WheelUpPane   select-pane -t= \; copy-mode -e \; send-keys -M
+bind -n WheelDownPane select-pane -t= \;                 send-keys -M
 
 # highlight active window
 set-window-option -g window-status-current-bg red
@@ -37,5 +37,3 @@ set-option -g set-titles on
 set-option -g set-titles-string '#S:#W' # window number,program name,active (or not)
 set-window-option -g automatic-rename on # auto name
 
-bind B source-file ~/dotfiles/two.panes.cmds
-bind C source-file ~/dotfiles/three.panes.cmds
